feat(core,docs): release 1.0.0 con refactor, features y documentación actualizada
- Actualiza la versión a 1.0.0 en pom.xml y README.md.
- Añade entrada detallada en CHANGELOG.md para el release.
- Refactoriza MakeLiquidacionService y modelos para soporte de adicional por hora y mejoras de logging/debug.
- Agrega métodos jsonify en modelos clave.
- Actualiza y agrega diagramas Mermaid (arquitectura, flujo de liquidación, ERD, despliegue).
- Mejora el workflow de documentación automática y el portal de documentación.
- Actualiza Dockerfile para instalar curl.
- Cambia branding y rutas en la documentación generada.

BREAKING CHANGE: Cambios incompatibles en la estructura de paquetes y repositorios. Actualizar integraciones y dependencias externas.